# lazy_format

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
